Get it looking like an app

--- a/bin/index.html
+++ b/bin/index.html
@@ -15,11 +15,7 @@
     </header>
     <main class="app__body">
       <div class="videos">
-        <div id="primary-videos" class="videos__primary">
-          <div id="my-video-container" class="videos__video-container">
-              <video autoplay muted></video>
-          </div>
-        </div>
+        <div id="primary-videos" class="videos__primary"></div>
         <div id="secondary-videos" class="videos__secondary"></div>
       </div>
     </main>
